# startuppong-client-rs

./: Cargo.toml  README.md  search-index.js
examples/: add_match.rs  get_player_ids.rs  get_players.rs
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/rustc_serialize/serialize/: trait.Decodable.js  trait.Encodable.js
implementors/std/error/: trait.Error.js
src/: error.rs  lib.rs
src/startuppong/: error.rs.html  lib.rs.html
startuppong/: fn.add_match.html  fn.add_match_with_names.html  fn.get_players.html  fn.get_players_ids.html  fn.get_recent_matches_for_company.html  index.html  sidebar-items.js  struct.Account.html  struct.GetMatchesResponse.html  struct.GetPlayersResponse.html  struct.Match.html  struct.Player.html
startuppong/error/: enum.ApiError.html  index.html  sidebar-items.js
