[package]
name = "startuppong"
version = "0.2.1"
authors = ["Joe Wilm <jdwilm@gmail.com>"]
license = "MIT"
description = "startuppong.com API client"
documentation = "http://www.jwilm.io/startuppong-client-rs/startuppong/"
repository = "https://github.com/jwilm/startuppong-client-rs"
readme = "README.md"
keywords = ["leaderboard", "ping", "pong"]

[features]
# Running `cargo test` with the api_test feature will run additional tests
# against the startuppong.com live API servers. The environment tokens
# STARTUPPONG_ACCOUND_ID and STARTUPPONG_ACCESS_KEY must be defined for these
# tests to pass.
api_test = []

[dependencies]
rustc-serialize = "~0.3"
hyper = "0.6.4"
mime = "^0.0"
